# G-LED

./: .gitignore  main_diff_bfs.py  pyproject.toml
conf/: conf.yaml
conf/dataset/: BackwardFacingStep2D.yaml  KuramotoSivashinsky1D.yaml
conf/model/: TransformerBackwardFacingStep2D.yaml  TransformerKuramotoSivashinsky1D.yaml
notebooks/: datasets_KuramotoSivashinsky.ipynb
src/conf/: conf.py  dataset.py  model.py
src/g_led/: __init__.py  callbacks.py  datasets.py  loggers.py  main_diff_bfs.py  main_diff_eval_bfs.py  main_seq_bfs.py  main_seq_eval_bfs.py  main_sequential.py  utils.py
src/g_led/data/: data_bfs_preprocess.py
src/g_led/train_test_seq/: test_seq.py  train_seq.py
src/g_led/train_test_spatial/: test_diff.py  test_diff_ensamble.py  train_diff.py
src/g_led/transformer/: sequentialModel.py  spatialModel.py
tests/: fixtures.py  test_dataset.py
train_test_spatial/: train_diff.py
