[project]
name = "g-led"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
]
requires-python = ">=3.10"
dependencies = [
    "hydra-orm>=0.1.0",
    "imagen-pytorch>=1.25.9",
]

[project.scripts]
g-led = "g_led:main"

[tool.uv]
index-strategy = "unsafe-best-match"
link-mode = "symlink"

[tool.uv.sources]
torch = [
    { index = "pytorch" },
]
hydra-orm = [
    { git = "https://github.com/reepoi/hydra-orm", tag = "v0.1.2" },
]
imagen-pytorch = [
    { path = "../imagen-pytorch", editable = true },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
